--- a/platform/c64/Makefile
+++ b/platform/c64/Makefile
@@ -10,7 +10,7 @@ TARGET = c64
 
 PROJECTDIRS = ../.. $(CONTIKI)/apps/telnetd
 
-PROJECT_SOURCEFILES = shell.c bbs-page.c bbs-blist.c bbs-file.c bbs-read.c bbs-post.c bbs-setboard.c telnetd.c
+PROJECT_SOURCEFILES = shell.c bbs-file.c bbs-read.c bbs-post.c bbs-setboard.c telnetd.c
 
 DEFINES = WITH_LOGGING,WITH_BOOST,TELNETD_CONF_REJECT,TELNETD_CONF_MAX_IDLE_TIME=0
 
