Renamed files to make all consistent

--- a/platform/c64/Makefile
+++ b/platform/c64/Makefile
@@ -8,9 +8,9 @@ all: $(CONTIKI_PROJECT)
 
 TARGET = c64
 
-PROJECTDIRS = ../.. $(CONTIKI)/apps/telnetd
+#PROJECTDIRS = ../.. $(CONTIKI)/apps/telnetd
 
-PROJECT_SOURCEFILES = shell.c bbs-file.c bbs-read.c bbs-post.c bbs-setboard.c telnetd.c
+PROJECT_SOURCEFILES = bbs-shell.c bbs-file.c bbs-read.c bbs-post.c bbs-setboard.c bbs-telnetd.c
 
 DEFINES = WITH_LOGGING,WITH_BOOST,TELNETD_CONF_REJECT,TELNETD_CONF_MAX_IDLE_TIME=0
 
