Idle timer is now working

--- a/platform/c64/Makefile
+++ b/platform/c64/Makefile
@@ -12,7 +12,8 @@ TARGET = c64
 
 PROJECT_SOURCEFILES = bbs-shell.c bbs-file.c bbs-read.c bbs-post.c bbs-setboard.c bbs-telnetd.c bbs-encodings.c
 
-DEFINES = WITH_LOGGING,WITH_BOOST,TELNETD_CONF_REJECT,TELNETD_CONF_MAX_IDLE_TIME=0
+#DEFINES = WITH_LOGGING,WITH_BOOST,TELNETD_CONF_REJECT,TELNETD_CONF_MAX_IDLE_TIME=0
+DEFINES = WITH_LOGGING,WITH_BOOST,TELNETD_CONF_REJECT
 
 CONTIKI_WITH_IPV4 = 1
 
